--- a/things/src/main/res/layout/activity_main.xml
+++ b/things/src/main/res/layout/activity_main.xml
@@ -16,4 +16,15 @@
             app:title="@string/app_name"
             android:id="@+id/toolbar"/>
 
+    <Button
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            style="@style/Widget.MaterialComponents.Button"
+            android:id="@+id/start_connection_button"
+            android:text="Connect to companion app"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
