--- a/things/src/main/res/layout/activity_main.xml
+++ b/things/src/main/res/layout/activity_main.xml
@@ -7,24 +7,24 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <androidx.appcompat.widget.Toolbar
-            android:layout_width="0dp"
-            android:layout_height="56dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:title="@string/app_name"
-            android:id="@+id/toolbar"/>
-
-    <Button
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            style="@style/Widget.MaterialComponents.Button"
-            android:id="@+id/start_connection_button"
-            android:text="Connect to companion app"
+    <TextView
+            android:id="@+id/connection_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            />
+            android:layout_margin="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    <Button
+            style="@style/Widget.MaterialComponents.Button"
+            android:id="@+id/start_connection_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pairing_start"
+            android:enabled="false"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/connection_status" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
