feat(pairing): Work on pairing shared resources  - Add ability to observe connection state  - Create endpoint adapter to list endpoints  - Add null value fix to status observable

--- a/shared/src/main/res/values/styles.xml
+++ b/shared/src/main/res/values/styles.xml
@@ -1,9 +1,10 @@
 <resources>
 
-    <style name="Theme.Sid" parent="Theme.MaterialComponents.Light">
+    <!-- The primary theme for Sid dashboard/console UI -->
+    <style name="Theme.Sid" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryDark">@color/primaryDarkColor</item>
         <item name="colorSecondary">@color/secondaryColor</item>
-    </style>.
+    </style>
 
 </resources>
